--- a/1-embeddings.ipynb
+++ b/1-embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "38682486",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,9 @@
     "\n",
     "importlib.reload(io_helpers)\n",
     "\n",
-    "documents = io_helpers.get_documents(print_info=True, read_embeddings=True)"
+    "documents = io_helpers.get_documents(print_info=True, read_embeddings=True)\n",
+    "\n",
+    "filtered_docs = documents[documents[\"original_doc_ids\"].apply(lambda x: len(x) > 0)]"
    ]
   },
   {
