--- a/4-retrieve.ipynb
+++ b/4-retrieve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "7815f7af",
    "metadata": {},
    "outputs": [],
@@ -22,19 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "b6f8e973",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_30170/2558687755.py:1: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
-      "  embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
     "vector_store = LanceDB(uri=LANCEDB_DIR, embedding=embeddings, table=db.open_table(TABLE_NAME_CHUNKS))"
@@ -42,7 +33,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
+   "id": "5a9546b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(300,)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple([300])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "244b0531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import DataFrameLoader\n",
+    "from typing import List, Tuple\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def retrieve_newer_chunks(retrieved_chunks) -> List:\n",
+    "    while True:\n",
+    "        outdated_by_ids = {\n",
+    "            id_ for chunk in retrieved_chunks for id_ in chunk.metadata.get(\"outdated_by_chunk_ids\", [])\n",
+    "        }\n",
+    "        chunk_ids = {chunk.metadata[\"chunk_id\"] for chunk in retrieved_chunks}\n",
+    "        outdated_by_ids -= chunk_ids\n",
+    "\n",
+    "        if len(outdated_by_ids) == 0:\n",
+    "            break\n",
+    "\n",
+    "        table = db.open_table(TABLE_NAME_CHUNKS)\n",
+    "        if len(outdated_by_ids) == 1:\n",
+    "            table_data = table.search().where(f\"id == {next(iter(outdated_by_ids))}\").to_pandas()\n",
+    "        else:\n",
+    "            table_data = table.search().where(f\"id IN {tuple(outdated_by_ids)}\").to_pandas()\n",
+    "\n",
+    "        # Flatten metadata column into top-level columns\n",
+    "        metadata_df = table_data[\"metadata\"].apply(pd.Series)\n",
+    "\n",
+    "        # Drop the original nested metadata column\n",
+    "        table_data = table_data.drop(columns=[\"metadata\"])\n",
+    "\n",
+    "        # Merge the expanded metadata back\n",
+    "        flattened_df = pd.concat([table_data, metadata_df], axis=1)\n",
+    "        loader = DataFrameLoader(flattened_df, page_content_column=\"text\")\n",
+    "        additional_chunks = loader.load()\n",
+    "        retrieved_chunks.extend(additional_chunks)\n",
+    "\n",
+    "    return retrieved_chunks\n",
+    "\n",
+    "\n",
+    "def filter_outdated_chunks(chunks: List) -> Tuple[List, List]:\n",
+    "    \"\"\"\n",
+    "    returns:\n",
+    "    - (chunks_current, chunks_outdated)\n",
+    "    \"\"\"\n",
+    "    chunks_outdated = []\n",
+    "    chunks_current = []\n",
+    "    for chunk in chunks:\n",
+    "        if len(chunk.metadata[\"outdated_by_chunk_ids\"]) != 0:\n",
+    "            chunks_outdated.append(chunk)\n",
+    "        else:\n",
+    "            chunks_current.append(chunk)\n",
+    "    return (chunks_current, chunks_outdated)\n",
+    "\n",
+    "\n",
+    "def sort_chunks(chunks: List) -> List:\n",
+    "    chunks.sort(reverse=True, key=lambda c: c.metadata[\"creation_date\"])\n",
+    "    return chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "74c8deb1",
    "metadata": {},
    "outputs": [],
@@ -54,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "89c63d7f",
    "metadata": {},
    "outputs": [],
@@ -65,18 +141,21 @@
     "importlib.reload(llm)\n",
     "\n",
     "\n",
-    "def generate(query: str, context: List):\n",
-    "    docs_content = \"\\n\\n\".join(doc.page_content for doc in context)\n",
+    "def generate(query: str, context: List, use_dq_assessment=True, model: str = \"gpt-4.1\"):\n",
+    "    docs_content = \"\\n\\n-- new chunk --\\n\".join(f\"{doc.page_content}\" for doc in context)\n",
+    "\n",
     "    system_prompt = \"You are an expert in question answering from a given context.\"\n",
-    "    user_prompt = f\"Answer the given question as short as possible based on the context, which has been retrieved by similarity search from a knowledge base.\\nContext:\\n{docs_content}\\n\\nQuestion: {query}\"\n",
-    "    model = \"gpt-4.1\"\n",
+    "    if use_dq_assessment:\n",
+    "        user_prompt = f'Answer the given question as short as possible based on the given context. The context consist of multiple chunks which are devided by \"-- new chunk --\". The chunks are ordered based on their currency with the most current one at the beginning. If they include multiple conflictings answers to the question, take the one that appears first in the context.\\nContext:\\n{docs_content}\\n\\nQuestion: {query}'\n",
+    "    else:\n",
+    "        user_prompt = f\"Answer the given question as short as possible based on the context, which has been retrieved by similarity search from a knowledge base.\\nContext:\\n{docs_content}\\n\\nQuestion: {query}\"\n",
     "\n",
     "    return llm.call_openai(system_prompt, user_prompt, model, response_format_pydantic=llm.LLMQAResponse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "27c7fb4b",
    "metadata": {},
    "outputs": [
@@ -84,125 +163,188 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Widowed\n"
+      "Without DQ:\n",
+      "The occupation of Y. Nelson is not specified in the judgment.\n",
+      "\n",
+      "With DQ:\n",
+      "The judgment does not specify the occupation of Y. Nelson.\n"
      ]
     }
    ],
    "source": [
-    "query = \"According to the hospitalization records of Knoxville City Hospital, what is S. Moore's marital status?\"\n",
+    "query = \"According to the judgment of Glenwood, Quailwood, Court, what was the occupation of Y. Nelson?\"\n",
     "\n",
+    "\n",
+    "print(\"Without DQ:\")\n",
     "context = retrieve(query)\n",
-    "response = generate(query, context)\n",
+    "response = generate(query, context, use_dq_assessment=False)\n",
+    "print(response.answer)\n",
+    "print()\n",
     "\n",
+    "print(\"With DQ:\")\n",
+    "context = retrieve(query, k=10)\n",
+    "context = retrieve_newer_chunks(context)\n",
+    "context = sort_chunks(context)\n",
+    "response = generate(query, context=context)\n",
     "print(response.answer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "497a606c",
+   "execution_count": 96,
+   "id": "3d5f1a84",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "page_content='Hospitalization Record\n",
+      "300002\n",
+      "2015-01-01 00:00:00\n",
+      "3705 - outdated by []\n",
+      "-----------\n",
+      "Chief judge according to the court judgment of Danbury, Pinehurst, Court | J. Smith\n",
+      "Residence of F. Williams according to the court judgment of Upton, Georgetown, Court | 45, Maple Avenue, Georgetown.\n",
+      "Defense lawyer for Y. Nelson according to the judgment of Glenwood, Quailwood, Court | J. Smith\n",
+      "Date of the court judgment of Bayside, Roseville, Court | 15th November, 2022\n",
+      "Name of the chief judge according to the court judgment of Trenton, Eastwood, Court | J. Smith\n",
+      "-----------\n",
+      "400139\n",
+      "2010-01-01 00:00:00\n",
+      "3544 - outdated by []\n",
+      "-----------\n",
+      "In a significant case adjudicated by the 9th Judicial Circuit of Glenwood, the Glenwood, Quailwood Court delivered a judgment on June 10, 2023, against a female defendant, Y. Nelson. The court proceedings were overseen by Chief Judge Hon. H. Ruiz and Presiding Judge Hon. E. Collins, with K. Kelly serving as the court clerk.\n",
+      "-----------\n",
+      "400139\n",
+      "2010-01-01 00:00:00\n",
+      "3549 - outdated by []\n",
+      "-----------\n",
+      "Y. Nelson was represented by defense lawyer L. Johnson from Parker & Associates during the trial. The judgment also outlined her right to appeal within ten days from the judgment date, which could be submitted through the Glenwood, Quailwood Court if pursued.\n",
+      "-----------\n",
+      "400139\n",
+      "2010-01-01 00:00:00\n",
+      "3547 - outdated by []\n",
+      "-----------\n",
+      "The Glenwood, Quailwood Procuratorate, spearheading the prosecution, highlighted Nelson’s aggressive behavior, particularly between February 10 and February 20, 2023, when she forcibly took goods worth approximately $800 from local vendors without payment. This action was backed by evidence recovered from her residence. Her continued misconduct culminated in an incident on March 12, 2023, when she obstructed traffic and shouted obscenities near a school, creating chaos and alarm among parents and students.\n",
+      "-----------\n",
+      "100139\n",
+      "2005-01-01 00:00:00\n",
+      "2817 - outdated by []\n",
+      "-----------\n",
+      "Glenwood, Quailwood Court\n",
+      "9th Judicial Circuit\n",
+      "State of Glenwood\n",
       "\n",
-      "Basic Information:\n",
-      "Name: S. Moore\n",
-      "Gender: Female\n",
-      "Age: 74\n",
-      "Ethnicity: Caucasian\n",
-      "Marital Status: Married\n",
-      "Occupation: Retired\n",
-      "Address: 60, Newport Street, Knoxville\n",
-      "Admission Time: 11th January\n",
-      "Record Time: 11th January 14:00\n",
-      "Historian: Self\n",
-      "Hospital Name: Knoxville City Hospital\n",
+      "Case No: 2023-458-CR\n",
       "\n",
-      "Chief Complaint:\n",
-      "Intermittent wheezing, coughing, and shortness of breath for 2 weeks' metadata={'chunk_id': 1512, 'creation_date': datetime.datetime(2005, 1, 1, 0, 0), 'doc_id': 100209, 'domain': 'Medical', 'outdated_by_chunk_ids': [1725]}\n",
+      "Chief Judge: Hon. H. Ruiz\n",
+      "Presiding Judge: Hon. E. Collins\n",
+      "Court Clerk: K. Kelly\n",
       "\n",
-      "page_content='Hospitalization Record\n",
+      "---\n",
       "\n",
-      "Basic Information:\n",
-      "Name: S. Moore\n",
-      "Gender: Female\n",
-      "Age: 74\n",
-      "Ethnicity: Caucasian\n",
-      "Marital Status: Widowed\n",
-      "Occupation: Retired\n",
-      "Address: 60, Newport Street, Knoxville\n",
-      "Admission Time: 11th January\n",
-      "Record Time: 11th January 14:00\n",
-      "Historian: Self\n",
-      "Hospital Name: Knoxville City Hospital\n",
+      "**JUDGMENT**\n",
       "\n",
-      "Chief Complaint:\n",
-      "Intermittent wheezing, coughing, and shortness of breath for 2 weeks' metadata={'chunk_id': 1230, 'creation_date': datetime.datetime(2000, 1, 1, 0, 0), 'doc_id': 209, 'domain': 'Medical', 'outdated_by_chunk_ids': [1725]}\n",
+      "**The People of Glenwood vs. Y. Nelson**\n",
       "\n",
-      "page_content='Moore's general health is stable, with his hypertension managed by medication, and no significant changes in his systemic condition observed since admission. His family has a history of hypertension, though no severe infectious or chronic diseases have been documented. Regular monitoring and additional diagnostic tests, including a pending skin biopsy, are underway to fine-tune his treatment plan.\n",
+      "**1. Court and Prosecutor Information:**\n",
       "\n",
-      "K. Moore's case underscores the need for thorough evaluation in dermatological diagnoses, especially in elderly patients, and highlights the hospital's commitment to detailed patient care and management.' metadata={'chunk_id': 1666, 'creation_date': datetime.datetime(2010, 1, 1, 0, 0), 'doc_id': 400183, 'domain': 'Medical', 'outdated_by_chunk_ids': []}\n",
+      "*Court:* Glenwood, Quailwood Court  \n",
+      "*Prosecutor:* Glenwood, Quailwood Procuratorate  \n",
       "\n",
-      "page_content='Hospitalization Record\n",
+      "*Chief Judge:* Hon. H. Ruiz  \n",
+      "*Presiding Judge:* Hon. E. Collins  \n",
+      "*Court Clerk:* K. Kelly  \n",
       "\n",
-      "Basic Information:\n",
-      "Name: L. Rogers\n",
-      "Gender: Female\n",
-      "Age: 56\n",
-      "Ethnicity: Caucasian\n",
-      "Marital Status: Married\n",
-      "Occupation: Teacher\n",
-      "Address: 89, Greenfield street, Knoxville\n",
-      "Admission Time: 6th, January\n",
-      "Record Time: 6th, January\n",
-      "Historian: Dr. James Nelson\n",
-      "Hospital Name: Knoxville General Hospital\n",
+      "**2. Defendant and Defense Lawyer Information:**\n",
+      "-----------\n",
+      "100139\n",
+      "2005-01-01 00:00:00\n",
+      "2821 - outdated by []\n",
+      "-----------\n",
+      "*Arrest:*  \n",
+      "On March 15, 2023, the Glenwood, Quailwood Procuratorate issued an arrest warrant for Y. Nelson upon finding sufficient evidence to substantiate the charges.\n",
       "\n",
-      "Chief Complaint:\n",
-      "Blurry, foggy vision and decreased visual acuity for the past 3 months' metadata={'chunk_id': 1084, 'creation_date': datetime.datetime(2000, 1, 1, 0, 0), 'doc_id': 192, 'domain': 'Medical', 'outdated_by_chunk_ids': [1669]}\n",
+      "**4. Case Statement:**\n",
       "\n",
-      "page_content='Hospitalization Record:\n",
+      "The case revolves around a series of disruptive and aggressive behaviors exhibited by Y. Nelson between January 15, 2023, and March 12, 2023. Investigations revealed that her actions incited public disturbances, financial losses to vendors, and significant distress to community members.\n",
+      "-----------\n",
+      "100139\n",
+      "2005-01-01 00:00:00\n",
+      "2820 - outdated by []\n",
+      "-----------\n",
+      "*Detention Measures Taken:*  \n",
+      "On February 20, 2023, Y. Nelson was detained under suspicion of Picking Quarrels and Provoking Trouble after a series of disturbances. Detailed assessments of the collected evidence further implicated the defendant.\n",
       "\n",
-      "Basic Information:\n",
-      "Name: K. Moore\n",
-      "Gender: Male\n",
-      "Age: 85\n",
-      "Ethnicity: Caucasian\n",
-      "Marital Status: Widowed\n",
-      "Occupation: Retired\n",
-      "Address: 27, Milton Street, Upton\n",
-      "Admission Time: 10th February\n",
-      "Record Time: 10th February\n",
-      "Historian: Self\n",
-      "Hospital Name: Upton General Hospital\n",
+      "*Criminal Detention:*  \n",
+      "On February 22, 2023, the Quailwood Police Department placed Y. Nelson under formal criminal detention following additional evidence collection and verification.\n",
+      "-----------\n",
+      "139\n",
+      "2000-01-01 00:00:00\n",
+      "2108 - outdated by []\n",
+      "-----------\n",
+      "Glenwood, Quailwood Court\n",
+      "9th Judicial Circuit\n",
+      "State of Glenwood\n",
       "\n",
-      "Chief Complaint:\n",
-      "Itchy skin rashes for 2 weeks\n",
+      "Case No: 2023-458-CR\n",
       "\n",
-      "Present Illness:\n",
-      "Onset:\n",
-      "Started suddenly 2 weeks ago at home, no obvious prodrome, possible trigger unknown\n",
+      "Chief Judge: Hon. H. Ruiz\n",
+      "Presiding Judge: Hon. E. Collins\n",
+      "Court Clerk: K. Kelly\n",
       "\n",
-      "Main Symptoms:\n",
-      "Red, itchy skin rashes on wrists, forearms, and neck; papules and occasional blisters; symptoms worsen with scratching and slightly improve with topical creams\n",
+      "---\n",
       "\n",
-      "Accompanying Symptoms:\n",
-      "Mild swelling and lichenification in areas of persistent scratching, no fever or systemic symptoms\n",
+      "**JUDGMENT**\n",
       "\n",
-      "Diagnosis and Treatment History:\n",
-      "Applied over-the-counter hydrocortisone cream with partial relief, no prior consultation before admission' metadata={'chunk_id': 1004, 'creation_date': datetime.datetime(2000, 1, 1, 0, 0), 'doc_id': 183, 'domain': 'Medical', 'outdated_by_chunk_ids': [1664]}\n",
-      "\n"
+      "**The People of Glenwood vs. Y. Nelson**\n",
+      "\n",
+      "**1. Court and Prosecutor Information:**\n",
+      "\n",
+      "*Court:* Glenwood, Quailwood Court  \n",
+      "*Prosecutor:* Glenwood, Quailwood Procuratorate  \n",
+      "\n",
+      "*Chief Judge:* Hon. H. Ruiz  \n",
+      "*Presiding Judge:* Hon. E. Collins  \n",
+      "*Court Clerk:* K. Kelly  \n",
+      "\n",
+      "**2. Defendant and Defense Lawyer Information:**\n",
+      "-----------\n",
+      "139\n",
+      "2000-01-01 00:00:00\n",
+      "2112 - outdated by []\n",
+      "-----------\n",
+      "*Arrest:*  \n",
+      "On March 15, 2023, the Glenwood, Quailwood Procuratorate issued an arrest warrant for Y. Nelson upon finding sufficient evidence to substantiate the charges.\n",
+      "\n",
+      "**4. Case Statement:**\n",
+      "\n",
+      "The case revolves around a series of disruptive and aggressive behaviors exhibited by Y. Nelson between January 15, 2023, and March 12, 2023. Investigations revealed that her actions incited public disturbances, financial losses to vendors, and significant distress to community members.\n",
+      "-----------\n",
+      "139\n",
+      "2000-01-01 00:00:00\n",
+      "2111 - outdated by []\n",
+      "-----------\n",
+      "*Detention Measures Taken:*  \n",
+      "On February 20, 2023, Y. Nelson was detained under suspicion of Picking Quarrels and Provoking Trouble after a series of disturbances. Detailed assessments of the collected evidence further implicated the defendant.\n",
+      "\n",
+      "*Criminal Detention:*  \n",
+      "On February 22, 2023, the Quailwood Police Department placed Y. Nelson under formal criminal detention following additional evidence collection and verification.\n",
+      "-----------\n",
+      "The judgment does not specify the occupation of Y. Nelson.\n"
      ]
     }
    ],
    "source": [
-    "for doc in context:\n",
-    "    print(doc)\n",
-    "    print()"
+    "for c in context:\n",
+    "    print(c.metadata[\"doc_id\"])\n",
+    "    print(c.metadata[\"creation_date\"])\n",
+    "    print(f\"{c.metadata[\"chunk_id\"]} - outdated by {c.metadata[\"outdated_by_chunk_ids\"]}\")\n",
+    "    print(\"-----------\")\n",
+    "    print(c.page_content)\n",
+    "    print(\"-----------\")\n",
+    "\n",
+    "print(response.answer)"
    ]
   }
  ],
